--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "es6-promise": "^3.2.1",
     "immutable": "^3.8.1",
-   
+    "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.3.1",
     "react-addons-pure-render-mixin": "^15.3.1",
-    
+    "react-dom": "^15.6.1",
+    "react-fa": "^4.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "redux": "^3.5.2",
@@ -42,7 +42,6 @@
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7"
-   
   },
   "scripts": {
     "start": "react-scripts start",
